--- a/aula10/formulario.html
+++ b/aula10/formulario.html
@@ -11,15 +11,16 @@
     <form action="" method="post"> 
 
         <label for ="nome">Nome :</label><br>
-        <input type="text" id="nome" name="nome" placeholder="Digite seu nome"><br>
+        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required><br>
         <label for ="sobrenome"> Sobrenome :</label><br>
-        <input type="text" id="sobrenome" name="Sobrenome" placeholder="Digite seu sobrenome"><br>
+        <input type="text" id="sobrenome" name="Sobrenome" placeholder="Digite seu sobrenome" required><br>
         <label for ="senha"> Senha :</label><br>
-        <input type="password" id="senha" name="Senha" placeholder="Digite sua senha"><br>
-        <input type="radio" id="funcao" name="Função" value="Aluno">
+        <input type="password" id="senha" name="Senha" placeholder="Digite sua senha" required><br>
+        <input type="radio" id="funcao" name="Função" value="Aluno" required>
         <label for="funcao"> Eu sou um aluno</label><br>
         <input type="radio" id="funcao2" name="Função" value="Professor">
         <label for="funcao2"> Eu sou um professor</label><br>
+
         <input type="submit" value="Enviar">
         <input type="reset" value="limpar"><br>
        
